--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -60,8 +60,7 @@
         <div class="container">
             <a mat-stroked-button
                [routerLink]="'/' + AppRoutes.AboutUs"
-               class="btn learn-more-btn center small-letter-spacing"
-               color="primary">
+               class="btn learn-more-btn center small-letter-spacing">
                 {{'App.HomePage.ParticipateSection.LearnMoreAboutParticipationButton' | translate}}
             </a>
         </div>
@@ -74,8 +73,7 @@
         </div>
         <a mat-stroked-button
            [routerLink]="'/' + AppRoutes.FAQ"
-           class="btn more-faq-btn center small-letter-spacing"
-           color="primary">
+           class="btn more-faq-btn center small-letter-spacing">
             {{'App.FAQ.Button.MoreFAQs' | translate}}
         </a>
     </section>
@@ -100,9 +98,7 @@
                     </a>
                 </div>
             </div>
-            <a mat-stroked-button
-               class="btn join-btn small-letter-spacing"
-               color="primary">
+            <a mat-stroked-button class="btn join-btn small-letter-spacing">
                 {{'App.HomePage.StayInformedSection.JoinMailingListButton' | translate}}
             </a>
         </div>
