--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -7,8 +7,12 @@ $mobile-breakpoint: 375px;
 $primary-font: Untitled-Sans-Regular;
 $primary-font-light: Untitled-Sans-Light;
 $primary-font-medium: Untitled-Sans-Medium;
-$second-font: Source Serif Pro;
+$secondary-font: Source Serif Pro;
 
 // Other
 $header-height: 6rem;
 $footer-height: 14.94rem;
+
+// Colors
+$text-color: #000000;
+$primary-color: #7154FF;
