--- a/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.html
@@ -1,10 +1,25 @@
 <header class="header" [ngClass]="{'panel-opened': isPanelOpened, 'header_shadow': isPageScrolled}">
     <div class="header-content">
         <a class="project-logo" routerLink="/">
-            <img class="project-logo__img" src="assets/images/logo.svg" [alt]="'App.Header.Logo.ImageAlt' | translate">
-            <p class="project-logo__text" [innerHTML]="'App.Header.Logo.Title' | translate"></p>
+            <img class="project-logo__img"
+                 src="assets/images/logo.svg"
+                 [alt]="'App.Header.Logo.ImageAlt' | translate">
+            <span class="project-logo__text" [innerHTML]="'App.Header.Logo.Title' | translate"></span>
         </a>
         <ng-container *ngTemplateOutlet="controls"></ng-container>
+        <div class="auth">
+            <ddp-language-selector></ddp-language-selector>
+            <div class="auth__login">
+                <ddp-sign-in-out></ddp-sign-in-out>
+            </div>
+            <a *ngIf="!isAuthenticated"
+               mat-flat-button
+               class="join-button"
+               routerLink="count-me-in"
+               color="primary">
+                <span translate>App.Navigation.Join</span>
+            </a>
+        </div>
         <button class="hamburger hamburger--slider" [ngClass]="{'is-active': isPanelOpened}"
                 [attr.aria-label]="'Common.Buttons.HeaderMenu.AriaLabel' | translate" (click)="openCloseMenu()">
             <span class="hamburger-box">
@@ -42,12 +57,4 @@
             </li>
         </ul>
     </nav>
-    <div class="auth">
-        <div class="auth__login">
-            <ddp-sign-in-out></ddp-sign-in-out>
-        </div>
-        <a *ngIf="!isAuthenticated" routerLink="count-me-in">
-            <span translate>App.Navigation.Join</span>
-        </a>
-    </div>
 </ng-template>
