--- a/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.scss';
+@import '../../../styles/variables';
+@import '../../../styles/common';
 
 .header {
     position: fixed;
@@ -17,6 +18,12 @@
     align-items: center;
     margin: auto;
     padding: 0 1.5625rem;
+    height: $header-height;
+}
+
+.header_shadow {
+    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.2);
+    transition: all ease 0.5s;
 }
 
 .navigation {
@@ -27,10 +34,11 @@
 .auth {
     display: flex;
     align-items: center;
+    min-width: 160px;
 }
 
 .navigation__item {
-    margin-right: 2.8125rem;
+    margin-right: 2rem;
     display: flex;
 }
 
@@ -42,6 +50,11 @@
     transition-timing-function: linear;
     background-color: transparent;
     border: 0;
+    display: flex;
+}
+
+.header-content .nav {
+    width: 100%;
     display: none;
 }
 
@@ -145,13 +158,57 @@
     }
 }
 
-@media screen and (max-width: 945px) {
+.project-logo {
+    display: flex;
+    margin-right: 15px;
+
+    &__text {
+        color: $text-color;
+        line-height: 1.125rem;
+        padding-left: 7px;
+        letter-spacing: -0.5px;
+    }
+
+    &__img {
+        width: 3.44rem;
+    }
+}
+
+.header-link {
+    color: $text-color;
+    font-family: $primary-font-medium;
+    letter-spacing: -0.015rem;
+    font-size: 1.5rem;
+    line-height: 3rem;
+}
+
+.join-button {
+    @extend .btn-common;
+    @extend .btn-header;
+    margin-left: 15px;
+}
+
+@media screen and (min-width: $desktop-breakpoint) {
+    .panel-controls,
+    .panel-opened .panel-controls,
     .hamburger {
+        display: none;
+    }
+
+    .header-content .nav {
         display: flex;
     }
 
-    .nav,
+    .header {
+        height: $header-height;
+    }
+
+    .header-link {
+        font-size: 1rem;
+        line-height: normal;
+    }
+
     .auth {
-        display: none;
+        min-width: 200px;
     }
 }
