--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -2,10 +2,11 @@
     <section class="introduction">
         <h2 class="title" translate>App.HomePage.IntroductionSection.Title</h2>
         <p class="text" translate>App.HomePage.IntroductionSection.Text</p>
-        <a mat-raised-button
+        <a mat-flat-button
            [routerLink]="'/' + AppRoutes.CountMeIn"
            class="btn join-cmi-btn center"
-           [innerText]="'App.HomePage.JoinCountMeInButton' | translate">
+           color="primary">
+            {{'App.HomePage.JoinCountMeInButton' | translate}}
         </a>
         <div class="logos">
             <img src="assets/images/logo-broad.svg"
@@ -20,10 +21,10 @@
     <section class="learn-more">
         <h2 class="title" translate>App.HomePage.LearnMoreSection.Title</h2>
         <p class="text" [innerHTML]="'App.HomePage.LearnMoreSection.Text' | translate"></p>
-        <a mat-raised-button
+        <a mat-stroked-button
            [routerLink]="'/' + AppRoutes.AboutUs"
-           class="btn learn-more-btn center"
-           [innerText]="'App.HomePage.LearnMoreSection.LearnMoreAboutUsButton' | translate">
+           class="btn learn-more-btn center small-letter-spacing">
+            {{'App.HomePage.LearnMoreSection.LearnMoreAboutUsButton' | translate}}
         </a>
     </section>
 
@@ -57,10 +58,10 @@
             </figure>
         </div>
         <div class="container">
-            <a mat-raised-button
+            <a mat-stroked-button
                [routerLink]="'/' + AppRoutes.AboutUs"
-               class="btn learn-more-btn center"
-               [innerText]="'App.HomePage.ParticipateSection.LearnMoreAboutParticipationButton' | translate">
+               class="btn learn-more-btn center small-letter-spacing">
+                {{'App.HomePage.ParticipateSection.LearnMoreAboutParticipationButton' | translate}}
             </a>
         </div>
     </section>
@@ -70,10 +71,10 @@
         <div class="container">
             <app-faq-section questions="App.FAQ.Questions" questionsCount="5"></app-faq-section>
         </div>
-        <a mat-raised-button
+        <a mat-stroked-button
            [routerLink]="'/' + AppRoutes.FAQ"
-           class="btn more-faq-btn center"
-           [innerText]="'App.FAQ.Button.MoreFAQs' | translate">
+           class="btn more-faq-btn center small-letter-spacing">
+            {{'App.FAQ.Button.MoreFAQs' | translate}}
         </a>
     </section>
 
@@ -97,9 +98,8 @@
                     </a>
                 </div>
             </div>
-            <a mat-raised-button
-               class="btn join-btn"
-               [innerText]="'App.HomePage.StayInformedSection.JoinMailingListButton' | translate">
+            <a mat-stroked-button class="btn join-btn small-letter-spacing">
+                {{'App.HomePage.StayInformedSection.JoinMailingListButton' | translate}}
             </a>
         </div>
     </section>
@@ -111,7 +111,8 @@
         <a mat-raised-button
            [routerLink]="'/' + AppRoutes.CountMeIn"
            class="btn join-cmi-btn"
-           [innerText]="'App.HomePage.JoinCountMeInButton' | translate">
+           color="primary">
+            {{'App.HomePage.JoinCountMeInButton' | translate}}
         </a>
     </section>
 </main>
