--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
@@ -222,36 +222,28 @@ section {
 }
 
 .btn {
-    font-family: $primary-font-medium;
-    font-size: 1.13rem;
-    letter-spacing: -0.26px;
-    padding: 1rem 2rem;
-    color: #000000;
-    line-height: 22px;
-    text-align: center;
-    border: 2px solid #000000;
-    border-radius: 4px;
-    background-color: transparent;
-    text-decoration: none;
-    box-shadow: none;
+    @extend .btn-common;
 
-    &:focus {
-        outline: none;
-        box-shadow: 0 0 0 4px rgba(21, 156, 228, 0.4);
+    font-size: 1.13rem;
+    padding: 1rem 2rem;
+    line-height: 22px;
+
+    &.mat-stroked-button {
+        @extend .btn-outline;
     }
 }
 
 .join-cmi-btn {
-    background-color: #7154FF;
-    color: #ffffff;
     font-size: 1.25rem;
-    letter-spacing: 0;
     margin: 1.56rem 0 7.5rem;
-    border: none;
 }
 
 .learn-more-btn {
     margin-top: 2.81rem;
+}
+
+.small-letter-spacing {
+    letter-spacing: -0.016rem;
 }
 
 .center {
