--- a/ddp-workspace/projects/ddp-pancan/src/styles/common.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/common.scss
@@ -1,7 +1,7 @@
 @import '../styles/variables.scss';
 
 .static-page-title {
-    font-family: $second-font;
+    font-family: $secondary-font;
     font-size: 2.5rem;
     font-weight: 600;
     letter-spacing: -0.08px;
@@ -15,3 +15,26 @@
     line-height: 34px;
 }
 
+.btn-common {
+    font-family: $primary-font-medium;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.btn-outline {
+    border-width: 1px;
+    border-color: $text-color;
+    background-color: transparent;
+}
+
+.btn-header {
+    font-size: 1rem;
+    padding: 0.65rem 1.5rem;
+    line-height: 20px;
+}
+
+@media screen and (min-width: $desktop-breakpoint) {
+    .btn-outline {
+        border-width: 2px;
+    }
+}
