--- a/ddp-workspace/projects/ddp-rgp/src/app/components/user-dashboard/user-dashboard.component.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/user-dashboard/user-dashboard.component.scss
@@ -23,20 +23,9 @@
 }
 
 .infobox {
-  border: 2px solid #e8702a;
-  border-radius: 8px;
-  background-color: rgba(113, 84, 255, 0.06);
-  padding: 1rem;
+  margin-bottom: 2.4rem;
 
-  &--common {
-    margin-bottom: 2.4rem;
-
-    text-align: justify;
-
-    p:last-of-type {
-      margin-bottom: 0;
-    }
-  }
+  font-weight: 500;
 }
 
 .infobox_dashboard {
