--- a/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
@@ -1,5 +1,40 @@
 @import '../../../styles/variables.scss';
 
+$footer-background: #131314;
+$footer-divider-color: #444444;
+
 .footer {
     min-height: $footer-height;
+    background: $footer-background;
+    color: white;
+}
+
+.actions {
+    border-bottom: 1px solid $footer-divider-color;
+    height: 8.625rem;
+
+    &__wrapper {
+        display: flex;
+    }
+}
+
+.info {
+    height: 6.25rem;
+}
+
+.info,
+.actions {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2rem 0 3.375rem;
+}
+
+.back-to-top {
+    padding: 0;
+}
+
+.contacts__item {
+    font-family: $primary-font-medium;
+    margin-left: 1.5rem;
 }
