--- a/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.scss
@@ -10,6 +10,11 @@
     height: $header-height;
     transition: all 200ms linear;
     background-color: white;
+
+    ::ng-deep.navigation__link {
+        font-size: 1.5rem;
+        line-height: 3rem;
+    }
 }
 
 .header-content {
@@ -26,20 +31,8 @@
     transition: all ease 0.5s;
 }
 
-.navigation {
-    list-style: none;
-    display: flex;
-}
-
 .auth {
-    display: flex;
-    align-items: center;
     min-width: 160px;
-}
-
-.navigation__item {
-    margin-right: 2rem;
-    display: flex;
 }
 
 .hamburger {
@@ -71,17 +64,11 @@
         visibility: visible;
         height: 100%;
 
-        .nav,
-        .auth {
+        .nav {
             display: flex;
         }
 
-        .auth {
-            flex-direction: column;
-            align-items: start;
-        }
-
-        .navigation {
+        ::ng-deep.navigation {
             flex-direction: column;
             padding: 0;
         }
@@ -174,20 +161,6 @@
     }
 }
 
-.header-link {
-    color: $text-color;
-    font-family: $primary-font-medium;
-    letter-spacing: -0.015rem;
-    font-size: 1.5rem;
-    line-height: 3rem;
-}
-
-.join-button {
-    @extend .btn-common;
-    @extend .btn-header;
-    margin-left: 15px;
-}
-
 @media screen and (min-width: $desktop-breakpoint) {
     .panel-controls,
     .panel-opened .panel-controls,
@@ -201,11 +174,11 @@
 
     .header {
         height: $header-height;
-    }
 
-    .header-link {
-        font-size: 1rem;
-        line-height: normal;
+        ::ng-deep.navigation__link {
+            font-size: 1rem;
+            line-height: normal;
+        }
     }
 
     .auth {
