--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -58,7 +58,12 @@ a {
 .SimpleButton {
     @extend .btn-common;
     @extend .btn-outline;
-    @extend .btn-header;
+    @extend .btn-auth;
+
+    .footer & {
+        color: white;
+        border-color: white;
+    }
 }
 
 .wrapper {
@@ -75,9 +80,4 @@ a {
 
 .Link {
     color: $primary-color;
-}
-
-// TODO: borders below for debug reason. Remove when header and footer are ready
-footer {
-    border-top: 1px solid black;
 }
