--- a/ddp-workspace/projects/ddp-pancan/src/styles/common.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/common.scss
@@ -19,6 +19,7 @@
     font-family: $primary-font-medium;
     text-decoration: none;
     border-radius: 4px;
+    font-size: 1rem;
 }
 
 .btn-outline {
@@ -27,8 +28,7 @@
     background-color: transparent;
 }
 
-.btn-header {
-    font-size: 1rem;
+.btn-auth {
     padding: 0.65rem 1.5rem;
     line-height: 20px;
 }
