--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
@@ -286,7 +286,7 @@ section {
             flex-direction: column;
 
             .image {
-                margin-right: 0;
+                margin: 0 auto;
             }
         }
 
