Fix wrong routerLink

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -62,7 +62,7 @@
         </div>
         <div class="container">
             <a mat-stroked-button
-               [routerLink]="'/' + AppRoutes.AboutUs"
+               [routerLink]="'/' + AppRoutes.Participation"
                class="btn learn-more-btn center small-letter-spacing">
                 {{'App.HomePage.ParticipateSection.LearnMoreAboutParticipationButton' | translate}}
             </a>
