Add Participation page (Pancan)

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
@@ -12,7 +12,7 @@ section {
     text-align: center;
 
     &:nth-of-type(even) {
-        background-color: #F6F7FA;
+        background-color: $section-grey-background-color;
     }
 
     &.introduction {
@@ -108,15 +108,11 @@ section {
 
             &__title {
                 display: inline;
-                font-family: $primary-font-medium;
-                letter-spacing: -0.07px;
-                line-height: 24px;
-                margin-right: 8px;
+                @extend .participate-step-label;
             }
 
             &__time {
-                letter-spacing: -0.07px;
-                line-height: 24px;
+                @extend .participate-step-time;
             }
 
             &__description {
@@ -238,10 +234,6 @@ section {
 
 .learn-more-btn {
     margin-top: 2.81rem;
-}
-
-.small-letter-spacing {
-    letter-spacing: -0.016rem;
 }
 
 .center {
