--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
@@ -108,11 +108,11 @@ section {
 
             &__title {
                 display: inline;
-                @extend .participate-step-label;
+                @include participate-step-label;
             }
 
             &__time {
-                @extend .participate-step-time;
+                @include participate-step-time;
             }
 
             &__description {
@@ -134,6 +134,10 @@ section {
             padding: 0 3.75rem;
             margin: 3.5rem auto;
             text-align: left;
+        }
+
+        .more-faq-btn {
+            @include small-letter-spacing;
         }
     }
 
@@ -177,6 +181,10 @@ section {
             padding-bottom: 1.13rem;
             text-align: left;
         }
+
+        .join-btn {
+            @include small-letter-spacing;
+        }
     }
 
     &.join-cmi {
@@ -208,22 +216,22 @@ section {
 }
 
 .title {
-    @extend .static-page-title;
+    @include static-page-title;
 }
 
 .text {
-    @extend .static-page-paragraph-text
+    @include static-page-paragraph-text;
 }
 
 .btn {
-    @extend .btn-common;
+    @include btn-common;
 
     font-size: 1.13rem;
     padding: 1rem 2rem;
     line-height: 22px;
 
     &.mat-stroked-button {
-        @extend .btn-outline;
+        @include btn-outline;
     }
 }
 
@@ -234,6 +242,7 @@ section {
 
 .learn-more-btn {
     margin-top: 2.81rem;
+    @include small-letter-spacing;
 }
 
 .center {
