--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -23,7 +23,7 @@
         <p class="text" [innerHTML]="'App.HomePage.LearnMoreSection.Text' | translate"></p>
         <a mat-stroked-button
            [routerLink]="'/' + AppRoutes.AboutUs"
-           class="btn learn-more-btn center small-letter-spacing">
+           class="btn learn-more-btn center">
             {{'App.HomePage.LearnMoreSection.LearnMoreAboutUsButton' | translate}}
         </a>
     </section>
@@ -63,7 +63,7 @@
         <div class="container">
             <a mat-stroked-button
                [routerLink]="'/' + AppRoutes.Participation"
-               class="btn learn-more-btn center small-letter-spacing">
+               class="btn learn-more-btn center">
                 {{'App.HomePage.ParticipateSection.LearnMoreAboutParticipationButton' | translate}}
             </a>
         </div>
@@ -76,7 +76,7 @@
         </div>
         <a mat-stroked-button
            [routerLink]="'/' + AppRoutes.FAQ"
-           class="btn more-faq-btn center small-letter-spacing">
+           class="btn more-faq-btn center">
             {{'App.FAQ.Button.MoreFAQs' | translate}}
         </a>
     </section>
@@ -101,7 +101,7 @@
                     </a>
                 </div>
             </div>
-            <a mat-stroked-button class="btn join-btn small-letter-spacing">
+            <a mat-stroked-button class="btn join-btn">
                 {{'App.HomePage.StayInformedSection.JoinMailingListButton' | translate}}
             </a>
         </div>
