--- a/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
@@ -11,15 +11,25 @@ $footer-divider-color: #444444;
 
 .actions {
     border-bottom: 1px solid $footer-divider-color;
-    height: 8.625rem;
+    font-size: 14px;
+    padding: 1.15rem 2rem 1.15rem 3.375rem;
 
     &__wrapper {
+        flex-direction: column;
         display: flex;
+    }
+
+    ::ng-deep.navigation {
+        flex-direction: column;
+        line-height: 35px;
+        padding-left: 0;
     }
 }
 
 .info {
     height: 6.25rem;
+    flex-direction: column;
+    padding: 1.15rem 2rem 2.5rem 3.375rem;
 }
 
 .info,
@@ -27,14 +37,45 @@ $footer-divider-color: #444444;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 2rem 0 3.375rem;
+
 }
 
 .back-to-top {
+    font-size: 14px;
+    text-align: left;
     padding: 0;
 }
 
 .contacts__item {
     font-family: $primary-font-medium;
     margin-left: 1.5rem;
+}
+
+@media screen and (min-width: $desktop-breakpoint) {
+    .actions {
+        height: 8.625rem;
+        font-size: 1rem;
+
+        &__wrapper {
+            flex-direction: row;
+        }
+
+        ::ng-deep.navigation {
+            flex-direction: row;
+            line-height: normal;
+        }
+    }
+
+    .info,
+    .actions {
+        padding: 0 2rem 0 3.375rem;
+    }
+
+    .info {
+        flex-direction: row;
+    }
+
+    .back-to-top {
+        font-size: 1rem;
+    }
 }
