DDP-6256 replace icon and add padding for list

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
             <button mat-button
                     class="back-to-top btn-common"
                     (click)="goToTop()" >
-                <mat-icon>arrow_upward</mat-icon>
+                <mat-icon>arrow_drop_up</mat-icon>
                 {{'App.Footer.BackToTopButton' | translate}}
             </button>
             <app-navigation></app-navigation>
