--- a/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
@@ -63,6 +63,7 @@ $footer-divider-color: #444444;
         ::ng-deep.navigation {
             flex-direction: row;
             line-height: normal;
+            padding-left: 40px;
         }
     }
 
