--- a/ddp-workspace/projects/ddp-rgp/src/app/components/study-messages/study-messages.component.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/study-messages/study-messages.component.scss
@@ -7,6 +7,12 @@
 }
 
 .app-table {
+  &__name {
+    margin-top: 40px;
+    padding-left: 12px;
+    text-decoration: underline;
+  }
+
   &__col {
     &--date {
       width: 20%;
