--- a/ddp-workspace/projects/ddp-rgp/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/user-dashboard/user-dashboard.component.html
@@ -22,7 +22,7 @@
 <ng-template #content>
   <div class="infobox">
     <p [innerHTML]="'DashboardPage.Info.Paragraph1' | translate"></p>
-    
+
     <p>
       <span [innerHTML]="'DashboardPage.Info.Paragraph2.Intro' | translate"></span>
 
@@ -32,7 +32,7 @@
     </p>
   </div>
 
-  <app-study-messages [messages]="messages"></app-study-messages>
+  <app-study-messages [persons]="persons"></app-study-messages>
 
   <div class="TopMargin50">
     <app-user-activities [activities]="activities"></app-user-activities>
